turbopack/crates/turbo-tasks-macros-tests/tests/function/fail_operation_method_self_ref.stderr
error: methods taking `self` are not supported with `operation`
  --> tests/function/fail_operation_method_self_ref.rs:13:17
   |
13 |     fn self_ref(&self) -> Vc<()> {
   |                 ^^^^^
